Made return to results button more self-explanitory

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <div id="savedDatasets" ng-show="showSaved" class="animate-show">
             <h2>
               <span ng-bind="savedResults.length"></span> Saved Datasets
-              <button ng-show="savedResults.length > 0" ng-click="returnSaved()" class="btn btn-default float-right">Send back to table</button>
+              <button ng-show="savedResults.length > 0" ng-click="returnSaved()" class="btn btn-default" style="float:right;">Remove all from collection and send to search results</button>
             </h2>
 
             <div>
